Mon Jun 18 17:38:50 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_require): searches ".rb" and ".so" at the same
	  time.  previous behavior (search ".rb", then ".so") has a
	  security risk (ruby-bugs#PR140).

Mon Jun 18 00:43:20 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_compile_pattern): avoid pushing unnecessary
	  option_set.

Sat Jun 16 10:58:48 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_load): tainted string is OK if wrapped *and*
	  $SAFE >= 4.

Thu Jun 14 16:27:07 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_start_0): should not nail down higher blocks
	  before preserving original context (i.e. should not alter
	  original context).

Tue Jun 12 14:24:02 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb: target_prefix is only for installation, not for
	  build.

Mon Jun 11 14:29:41 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* confgure.in: add RUBY_CANONICAL_BUILD.

Sat Jun  9 17:04:30 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* hash.c (ruby_setenv): readline library leaves their environment
	  strings uncopied.  "free" check revised.

Fri Jun  8 18:14:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* st.c (numhash): should shuffle bits by dividing by prime number.

Fri Jun  8 22:37:40 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (Init_stack): avoid __builtin_frame_address(2) to retrieve
	  stack bottom line.

Fri Jun  8 18:14:12 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* st.c (numhash): should shuffle bits by dividing by prime number.

Fri Jun  8 15:25:09 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_require): should set SCOPE_PUBLIC before calling
	  dln_load().

Wed Jun  6 16:11:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_load): should check if tainted even when wrap is
	  specified.

Wed Jun  6 14:34:27 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
