@@ -898,11 +898,11 @@ rb_gc_mark_frame(frame)
 #if defined(__human68k__) || defined(DJGPP)
 #if defined(__human68k__)
 typedef unsigned long rb_jmp_buf[8];
-__asm__ (".even
-_rb_setjmp:
-	move.l	4(sp),a0
-	movem.l	d3-d7/a3-a5,(a0)
-	moveq.l	#0,d0
+__asm__ (".even\n\
+_rb_setjmp:\n\
+	move.l	4(sp),a0\n\
+	movem.l	d3-d7/a3-a5,(a0)\n\
+	moveq.l	#0,d0\n\
 	rts");
 #ifdef setjmp
 #undef setjmp
@@ -910,19 +910,19 @@ _rb_setjmp:
 #else
 #if defined(DJGPP)
 typedef unsigned long rb_jmp_buf[6];
-__asm__ (".align 4
-_rb_setjmp:
-	pushl	%ebp
-	movl	%esp,%ebp
-	movl	8(%ebp),%ebp
-	movl	%eax,(%ebp)
-	movl	%ebx,4(%ebp)
-	movl	%ecx,8(%ebp)
-	movl	%edx,12(%ebp)
-	movl	%esi,16(%ebp)
-	movl	%edi,20(%ebp)
-	popl	%ebp
-	xorl	%eax,%eax
+__asm__ (".align 4\n\
+_rb_setjmp:\n\
+	pushl	%ebp\n\
+	movl	%esp,%ebp\n\
+	movl	8(%ebp),%ebp\n\
+	movl	%eax,(%ebp)\n\
+	movl	%ebx,4(%ebp)\n\
+	movl	%ecx,8(%ebp)\n\
+	movl	%edx,12(%ebp)\n\
+	movl	%esi,16(%ebp)\n\
+	movl	%edi,20(%ebp)\n\
+	popl	%ebp\n\
+	xorl	%eax,%eax\n\
 	ret");
 #endif
 #endif
