@@ -1,3 +1,7 @@
+Tue Jun 19 22:24:07 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* gc.c (rb_setjmp): avoid GCC 3.0 warnings.
+
 Mon Jun 18 17:38:50 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* eval.c (rb_f_require): searches ".rb" and ".so" at the same
